# libcvautomation

./: .gitignore  AUTHORS.md  COPYING  ChangeLog  ChangeLog.md  Makefile  Makefile.am  Makefile.in  NEWS.md  README  README.md  TODO.md  XTest_command_strings.html  XTest_key_strings.html  aclocal.m4  annotated.html  autogen.sh  classes.html  classlibcvautomation__funcs_1_1LibcvDisplayNotOpen-members.html  classlibcvautomation__funcs_1_1LibcvDisplayNotOpen.html  classlibcvautomation__funcs_1_1LibcvImageNotFound-members.html  classlibcvautomation__funcs_1_1LibcvImageNotFound.html  configure  configure.ac  cva-input.html  cva-input_8c-source.html  cva-input_8c.html  cva-input_8c_source.html  cva-match.c  cva-match.html  cva-match_8c-source.html  cva-match_8c.html  cva-match_8c_source.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  (+43 more)
apt/: update-packages.sh
apt/libcvautomation/: libcvautomation-dev_1.3-1_amd64.deb  libcvautomation-dev_1.3-2_amd64.deb  libcvautomation-dev_1.3-4_amd64.deb  libcvautomation-dev_1.4-1_amd64.deb  libcvautomation-dev_1.4-2_amd64.deb  libcvautomation-dev_1.5-1_amd64.deb  libcvautomation-dev_2.0-1_amd64.deb  libcvautomation-doc_1.3-1_all.deb  libcvautomation-doc_1.3-2_all.deb  libcvautomation-doc_1.3-4_all.deb  libcvautomation-doc_1.4-1_all.deb  libcvautomation-doc_1.4-2_all.deb  libcvautomation-doc_1.5-1_all.deb  libcvautomation-doc_2.0-1_all.deb  libcvautomation-examples_1.3-1_amd64.deb  libcvautomation-examples_1.3-2_amd64.deb  libcvautomation-examples_1.3-4_amd64.deb  libcvautomation-examples_1.4-1_amd64.deb  libcvautomation-examples_1.4-2_amd64.deb  libcvautomation-examples_1.5-1_amd64.deb  libcvautomation-examples_2.0-1_amd64.deb  libcvautomation-python_2.0-1_amd64.deb
apt/libcvautomation-source/: libcvautomation_1.3-1.dsc  libcvautomation_1.3-1_source.build  libcvautomation_1.3-1_source.changes  libcvautomation_1.3-2.dsc  libcvautomation_1.3-2_amd64.build  libcvautomation_1.3-2_amd64.changes  libcvautomation_1.3-4.dsc  libcvautomation_1.3-4_amd64.build  libcvautomation_1.3-4_amd64.changes  libcvautomation_1.4-1.dsc  libcvautomation_1.4-1_amd64.build  libcvautomation_1.4-1_amd64.changes  libcvautomation_1.5-1.dsc  libcvautomation_1.5-1_amd64.build  libcvautomation_1.5-1_amd64.changes  libcvautomation_2.0-1.dsc  libcvautomation_2.0-1_amd64.build  libcvautomation_2.0-1_amd64.changes
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libcvautomation-dev.install  libcvautomation-python.install  libcvautomation.cron.d.ex  libcvautomation.default.ex  libcvautomation.doc-base.EX  libcvautomation.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/debian/: changelog  changelog.in  copyright  copyright.in  libcvautomation-dev.install  libcvautomation-doc.install  libcvautomation-examples.install  rules
docs/: Doxyfile.in  Doxyfile_example.in  Doxyfile_library.in  Makefile.am  Makefile.in
docs/man/man1/: cva-input.1  cva-match.1
docs/man/man3/: XTest_command_strings.3  XTest_key_strings.3  cva-input.3  cva-match.3  cvaPoint.3  cvautomationList.3  libcv_search_methods.3  libcvautomation-opencv.h.3  libcvautomation-xlib.h.3  libcvautomation-xtest.h.3  libcvautomation.3  libcvautomation.h.3  libcvautomation_search_methods.3  writing_app_tests.3  xtest_command_strings.3  xtest_key_strings.3
documentation/: Doxyfile
examples/: Makefile.am  Makefile.in  cva-input.c  cva-match.c  openCVLogo.sh
include/: opencv1_includes  opencv2_includes
libcvautomation/: Makefile.am  Makefile.in  libcvautomation-opencv.c  libcvautomation-x11.c  libcvautomation-xlib.c  libcvautomation-xtest.c
python/: Makefile.am  Makefile.in  libcvautomation-swig.c  libcvautomation.py  libcvautomation.swig  libcvautomation_funcs.py  setup.py.in
rpm/: libcvautomation-1.3-1.src.rpm  libcvautomation-1.3-1.x86_64.rpm  libcvautomation-1.3-2.src.rpm  libcvautomation-1.3-2.x86_64.rpm  libcvautomation-1.3-4.src.rpm  libcvautomation-1.3-4.x86_64.rpm  libcvautomation-1.4-1.src.rpm  libcvautomation-1.4-1.x86_64.rpm  libcvautomation-1.4-2.src.rpm  libcvautomation-1.4-2.x86_64.rpm  libcvautomation-1.5-1.src.rpm  libcvautomation-1.5-1.x86_64.rpm  libcvautomation-2.0-1.el2.src.rpm  libcvautomation-2.0-1.el5.x86_64.rpm  libcvautomation-debuginfo-1.3-1.x86_64.rpm  libcvautomation-debuginfo-1.3-2.x86_64.rpm  libcvautomation-debuginfo-1.3-4.x86_64.rpm  libcvautomation-debuginfo-1.4-1.x86_64.rpm  libcvautomation-debuginfo-1.4-2.x86_64.rpm  libcvautomation-debuginfo-1.5-1.x86_64.rpm  libcvautomation-debuginfo-2.0-1.el5.x86_64.rpm  libcvautomation-devel-1.3-1.x86_64.rpm  libcvautomation-devel-1.3-2.x86_64.rpm  libcvautomation-devel-1.3-4.x86_64.rpm  libcvautomation-devel-1.4-1.x86_64.rpm  libcvautomation-devel-1.4-2.x86_64.rpm  libcvautomation-devel-1.5-1.x86_64.rpm  libcvautomation-devel-2.0-1.el5.x86_64.rpm  libcvautomation-doc-1.3-1.x86_64.rpm  libcvautomation-doc-1.3-2.x86_64.rpm  libcvautomation-doc-1.3-4.x86_64.rpm  libcvautomation-doc-1.4-1.x86_64.rpm  libcvautomation-doc-1.4-2.x86_64.rpm  libcvautomation-doc-1.5-1.x86_64.rpm  libcvautomation-doc-2.0-1.el5.x86_64.rpm  libcvautomation-examples-1.3-1.x86_64.rpm  libcvautomation-examples-1.3-2.x86_64.rpm  libcvautomation-examples-1.3-4.x86_64.rpm  libcvautomation-examples-1.4-1.x86_64.rpm  libcvautomation-examples-1.4-2.x86_64.rpm  (+5 more)
rpm/repodata/: repomd.xml
scripts/: openCVLogo.sh
search/: all_63.js  all_69.js  all_6c.js  all_6d.js  all_78.js  classes_63.js  classes_6c.js  defines_63.js  defines_6c.js  files_63.js  files_6c.js  functions_63.js  functions_69.js  functions_6b.js  functions_6d.js  functions_6f.js  functions_77.js  functions_78.js  namespaces_6c.js  search.js
src/: cva-match.c  cva-match.h  libcvautomation-opencv.c  libcvautomation-opencv.h  libcvautomation-x11.c  libcvautomation-x11.h  libcvautomation.h
(+18 files in other folders)
